[tool.poetry]
name = "render"
version = "0.1.0"
description = ""
authors = ["Pavel <urrisend@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
brotli = "^1.1.0"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
